# hoyo-game-starter

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  unocss.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: hoyo.rs  main.rs  monitor.rs  tray.rs
src/api/: index.ts
src/components/: AppointButton.svelte  Directory.svelte  OfficialButton.svelte  StarterButton.svelte  VersionTag.svelte
src/enum/: invoker.ts
src/layouts/: Game.svelte  Header.svelte
src/lib/: Game.svelte  Header.svelte  core.ts  index.ts  invoker.ts  persist.ts
