[package]
name = "hoyo_game_starter"
version = "1.0.5"
description = "米哈游游戏极速整合启动器"
authors = ["you"]
license = "mit"
repository = "https://github.com/mi-saka10032/hoyo-game-starter.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
rfd = "0.10.0"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
sysinfo = "0.30.12"
tokio = { version = "1.38.0", features = ["rt", "time"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
